# packaging-publishing-ps22

./: notebook.ipynb  pyproject.toml
src/cancer_prediction_ps22/scripts/: app.py
tests/: test_CancerModel.py
