[project]
name = "cancer-prediction-ps22"
version = "0.1.0"
description = "A basic model to predict cancerous tumors based on certain properties."
authors = [{name = "Priyanka Surana"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
]

[project.scripts]
cancer-prediction = "cancer_prediction_ps22.scripts.app:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true